--- a/package.json
+++ b/package.json
@@ -1,169 +1,58 @@
 {
-  "name": "djsbot_valerian",
-  "version": "0.2.3",
-  "description": "A discord.js bot made by ender!",
+  "name": "lavamusic",
+  "version": "1.0.4",
+  "description": "lavalink music bot base in erelajs",
   "main": "index.js",
-  "engines": {
-    "node": "16.13.0",
-    "npm": "8.1.0"
-  },
-  "dependencies": {
-    "@distube/soundcloud": "^1.0.0",
-    "@distube/spotify": "^1.0.0",
-    "ajv": "^6.12.6",
-    "any-base": "^1.1.0",
-    "asn1": "^0.2.4",
-    "assert-plus": "^1.0.0",
-    "aws-sign2": "^0.7.0",
-    "aws4": "^1.11.0",
-    "base64-js": "^1.5.1",
-    "bcrypt-pbkdf": "^1.0.2",
-    "blueapi.js": "^0.0.4",
-    "bmp-js": "^0.1.0",
-    "boolbase": "^1.0.0",
-    "buffer": "^5.7.1",
-    "buffer-equal": "^0.0.1",
-    "canvacord": "^5.2.3",
-    "canvas": "^2.8.0",
-    "capture-stack-trace": "^1.0.1",
-    "cheerio": "^0.22.0",
-    "color-support": "^1.1.3",
-    "create-error-class": "^3.0.2",
-    "css-select": "^1.2.0",
-    "css-what": "^2.1.3",
-    "dashdash": "^1.14.1",
-    "decompress-response": "^4.2.1",
-    "discord.js": "^13.3.1",
-    "discord.js-pagination": "^1.0.3",
-    "distube": "^3.0.2",
-    "dom-walk": "^0.1.2",
-    "duplexer3": "^0.1.4",
-    "ecc-jsbn": "^0.1.2",
-    "eventemitter3": "^1.2.0",
-    "exif-parser": "^0.1.12",
-    "extend": "^3.0.2",
-    "extsprintf": "^1.3.0",
-    "fast-deep-equal": "^3.1.3",
-    "fast-json-stable-stringify": "^2.1.0",
-    "file-type": "^9.0.0",
-    "forever-agent": "^0.6.1",
-    "form-data": "^2.3.3",
-    "fs": "^0.0.1-security",
-    "get-stream": "^3.0.0",
-    "getpass": "^0.1.7",
-    "gifencoder": "^2.0.1",
-    "gifwrap": "^0.9.2",
-    "global": "^4.4.0",
-    "got": "^6.7.1",
-    "har-schema": "^2.0.0",
-    "har-validator": "^5.1.5",
-    "http-signature": "^1.2.0",
-    "i": "^0.3.7",
-    "i18n": "^0.13.3",
-    "ieee754": "^1.2.1",
-    "image-q": "^1.1.1",
-    "is-function": "^1.0.2",
-    "is-redirect": "^1.0.0",
-    "is-retry-allowed": "^1.2.0",
-    "is-stream": "^1.1.0",
-    "is-typedarray": "^1.0.0",
-    "isstream": "^0.1.2",
-    "jimp": "^0.16.1",
-    "jpeg-js": "^0.4.2",
-    "jsbn": "^0.1.1",
-    "json-schema": "^0.2.3",
-    "json-schema-traverse": "^0.4.1",
-    "json-stringify-safe": "^5.0.1",
-    "jsprim": "^1.4.1",
-    "load-bmfont": "^1.4.1",
-    "lodash.assignin": "^4.2.0",
-    "lodash.bind": "^4.2.1",
-    "lodash.defaults": "^4.2.0",
-    "lodash.filter": "^4.6.0",
-    "lodash.flatten": "^4.4.0",
-    "lodash.foreach": "^4.5.0",
-    "lodash.map": "^4.6.0",
-    "lodash.merge": "^4.6.2",
-    "lodash.pick": "^4.4.0",
-    "lodash.reduce": "^4.6.0",
-    "lodash.reject": "^4.6.0",
-    "lodash.some": "^4.6.0",
-    "lowercase-keys": "^1.0.1",
-    "mime": "^1.6.0",
-    "mimic-response": "^2.1.0",
-    "min-document": "^2.19.0",
-    "moment": "^2.29.1",
-    "moment-duration-format": "^2.3.2",
-    "nan": "^2.15.0",
-    "node-fetch": "^2.6.5",
-    "node-internet-radio": "^0.2.1",
-    "npm": "^8.1.3",
-    "nth-check": "^1.0.2",
-    "oauth-sign": "^0.9.0",
-    "omggif": "^1.0.10",
-    "pako": "^1.0.11",
-    "parse-bmfont-ascii": "^1.0.6",
-    "parse-bmfont-binary": "^1.0.6",
-    "parse-bmfont-xml": "^1.1.4",
-    "parse-headers": "^2.0.4",
-    "path": "^0.12.7",
-    "performance-now": "^2.1.0",
-    "phin": "^2.9.3",
-    "pixelmatch": "^4.0.2",
-    "pngjs": "^3.4.0",
-    "prepend-http": "^1.0.4",
-    "process": "^0.11.10",
-    "psl": "^1.8.0",
-    "punycode": "^2.1.1",
-    "qs": "^6.5.2",
-    "random-puppy": "^1.1.0",
-    "reddit-fetch": "^1.5.1",
-    "request": "^2.88.2",
-    "simple-concat": "^1.0.1",
-    "simple-get": "^3.1.0",
-    "simply-djs": "^2.1.3",
-    "snekfetch": "^4.0.4",
-    "soundcloud": "^3.3.2",
-    "spotify": "^0.3.0",
-    "spotify-web-api-node": "^5.0.2",
-    "sshpk": "^1.16.1",
-    "tar": "^6.1.11",
-    "timed-out": "^4.0.1",
-    "timm": "^1.7.1",
-    "tinycolor2": "^1.4.2",
-    "tough-cookie": "^2.5.0",
-    "tr46": "^0.0.3",
-    "tunnel-agent": "^0.6.0",
-    "twemoji-parser": "^13.1.0",
-    "unique-random": "^1.0.0",
-    "unique-random-array": "^1.0.1",
-    "unzip-response": "^2.0.1",
-    "uri-js": "^4.4.1",
-    "url-parse-lax": "^1.0.0",
-    "utif": "^2.0.1",
-    "util": "^0.10.4",
-    "uuid": "^3.4.0",
-    "verror": "^1.10.0",
-    "webidl-conversions": "^3.0.1",
-    "whatwg-url": "^5.0.0",
-    "xhr": "^2.6.0",
-    "xml-parse-from-string": "^1.0.1",
-    "xml2js": "^0.4.23",
-    "xmlbuilder": "^11.0.1",
-    "xtend": "^4.0.2"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ender-thePlayer/valerian.git"
+    "url": "git+https://github.com/brblacky/lavamusic.git"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Ender-thePlayer/valerian/issues"
+  "keywords": [
+    "lavalink",
+    "erela",
+    "music",
+    "bot",
+    "discord-music",
+    "discord",
+    "musicbot"
+  ],
+  "author": "blacky",
+  "license ": "MIT",
+  "bugs": "https://github.com/brblacky/lavamusic/issues",
+  "homepage": "https://github.com/brblacky/lavamusic#readme",
+  "devDependencies": {
+    "node": "^16.6.1"
   },
-  "homepage": "https://github.com/Ender-thePlayer/valerian#readme"
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "delay": "^5.0.0",
+    "discord-button-page": "^4.0.0",
+    "discord-buttons": "^4.0.0",
+    "discord.js": "^13.3.1",
+    "discordjs-button-pagination": "^1.0.7",
+    "dotenv": "^10.0.0",
+    "erela.js": "^2.3.3",
+    "erela.js-apple": "^1.2.5",
+    "erela.js-deezer": "^1.0.7",
+    "erela.js-facebook": "^1.0.4",
+    "git": "^0.1.5",
+    "got": "^11.8.3",
+    "lavasfy": "^2.3.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
+    "mongoose": "^6.0.12",
+    "ms": "^2.1.3",
+    "node-superfetch": "^0.2.3",
+    "pretty-ms": "^7.0.1",
+    "reconlx": "^2.5.1",
+    "reddit-fetch": "^1.5.1",
+    "systeminformation": "^5.9.13"
+  }
 }
