--- a/package.json
+++ b/package.json
@@ -1,58 +1,167 @@
 {
-  "name": "lavamusic",
-  "version": "1.0.4",
-  "description": "lavalink music bot base in erelajs",
+  "name": "lavamusic-main",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "engines": {
-    "node": "16.x"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/brblacky/lavamusic.git"
-  },
-  "keywords": [
-    "lavalink",
-    "erela",
-    "music",
-    "bot",
-    "discord-music",
-    "discord",
-    "musicbot"
-  ],
-  "author": "blacky",
-  "license ": "MIT",
-  "bugs": "https://github.com/brblacky/lavamusic/issues",
-  "homepage": "https://github.com/brblacky/lavamusic#readme",
-  "devDependencies": {
-    "node": "^16.6.1"
-  },
   "dependencies": {
+    "acorn": "^8.6.0",
+    "acorn-walk": "^7.2.0",
+    "ansi-styles": "^4.3.0",
+    "asynckit": "^0.4.0",
+    "axios": "^0.21.4",
+    "acorn-globals": "^6.0.0",
+    "boolbase": "^1.0.0",
+    "bson": "^4.6.0",
+    "agent-base": "^6.0.2",
+    "base64-js": "^1.5.1",
+    "browser-process-hrtime": "^1.0.0",
+    "abab": "^2.0.5",
+    "callsites": "^3.1.0",
     "chalk": "^4.1.2",
+    "cheerio": "^1.0.0-rc.10",
+    "cheerio-select": "^1.5.0",
+    "buffer": "^5.7.1",
+    "cacheable-lookup": "^5.0.4",
+    "cacheable-request": "^7.0.2",
+    "combined-stream": "^1.0.8",
+    "css-select": "^4.1.3",
+    "css-what": "^5.1.0",
+    "clone-response": "^1.0.2",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "debug": "^4.3.3",
+    "cssom": "^0.4.4",
+    "data-urls": "^2.0.0",
+    "cssstyle": "^2.3.0",
+    "decimal.js": "^10.3.1",
+    "decompress-response": "^6.0.0",
+    "delayed-stream": "^1.0.0",
+    "denque": "^2.0.1",
+    "deep-is": "^0.1.4",
     "delay": "^5.0.0",
-    "discord-button-page": "^4.0.0",
-    "discord-buttons": "^4.0.0",
     "discord.js": "^13.3.1",
-    "discordjs-button-pagination": "^1.0.7",
+    "defer-to-connect": "^2.0.1",
+    "dom-serializer": "^1.3.2",
+    "discord-api-types": "^0.24.0",
+    "domelementtype": "^2.2.0",
+    "discord-button-page": "^4.0.0",
+    "domhandler": "^4.2.2",
+    "domutils": "^2.8.0",
+    "dot-prop": "^6.0.1",
     "dotenv": "^10.0.0",
+    "discordjs-button-pagination": "^1.0.7",
+    "entities": "^2.2.0",
     "erela.js": "^2.3.3",
-    "erela.js-apple": "^1.2.5",
+    "erela.js-apple": "^1.2.6",
     "erela.js-deezer": "^1.0.7",
     "erela.js-facebook": "^1.0.4",
+    "discord-buttons": "^4.0.0",
+    "domexception": "^2.0.1",
+    "end-of-stream": "^1.4.4",
+    "escodegen": "^2.0.0",
+    "estraverse": "^5.3.0",
+    "esprima": "^4.0.1",
+    "follow-redirects": "^1.14.5",
+    "esutils": "^2.0.3",
+    "fast-levenshtein": "^2.0.6",
+    "get-stream": "^5.2.0",
+    "has-flag": "^4.0.0",
+    "form-data": "^3.0.1",
+    "htmlparser2": "^6.1.0",
+    "html-encoding-sniffer": "^2.0.1",
     "git": "^0.1.5",
     "got": "^11.8.3",
+    "http-cache-semantics": "^4.1.0",
+    "http-proxy-agent": "^4.0.1",
+    "https-proxy-agent": "^5.0.0",
+    "is-obj": "^2.0.0",
+    "http2-wrapper": "^1.0.3",
+    "ieee754": "^1.2.1",
+    "is-potential-custom-element-name": "^1.0.1",
+    "kareem": "^2.3.2",
+    "jsdom": "^16.7.0",
     "lavasfy": "^2.3.0",
+    "iconv-lite": "^0.4.24",
     "lodash": "^4.17.21",
+    "lodash.isequal": "^4.5.0",
+    "json-buffer": "^3.0.1",
+    "memory-pager": "^1.5.0",
+    "keyv": "^4.0.4",
+    "mime-db": "^1.51.0",
+    "mime-types": "^2.1.34",
+    "levn": "^0.3.0",
     "moment": "^2.29.1",
-    "moment-duration-format": "^2.3.2",
-    "mongoose": "^6.0.12",
+    "mime": "^1.2.9",
+    "mongodb": "^4.1.4",
+    "mongodb-connection-string-url": "^2.2.0",
+    "mongoose": "^6.0.13",
+    "mpath": "^0.8.4",
+    "mquery": "^4.0.0",
     "ms": "^2.1.3",
+    "lowercase-keys": "^2.0.0",
+    "moment-duration-format": "^2.3.2",
+    "node-fetch": "^2.6.6",
     "node-superfetch": "^0.2.3",
+    "mimic-response": "^1.0.1",
+    "nth-check": "^2.0.1",
+    "node": "^16.13.0",
+    "normalize-url": "^6.1.0",
+    "ow": "^0.27.0",
+    "node-bin-setup": "^1.0.6",
+    "nwsapi": "^2.2.0",
+    "parse-ms": "^2.1.0",
+    "parse5": "^6.0.1",
+    "parse5-htmlparser2-tree-adapter": "^6.0.1",
+    "petitio": "^1.4.0",
+    "once": "^1.4.0",
     "pretty-ms": "^7.0.1",
-    "reconlx": "^2.5.1",
+    "optionator": "^0.8.3",
+    "p-cancelable": "^2.1.1",
+    "prelude-ls": "^1.1.2",
+    "psl": "^1.8.0",
+    "pump": "^3.0.0",
+    "punycode": "^2.1.1",
+    "regexp-clone": "^1.0.0",
     "reddit-fetch": "^1.5.1",
-    "systeminformation": "^5.9.13"
-  }
+    "quick-lru": "^5.1.1",
+    "reconlx": "^2.5.1",
+    "saslprep": "^1.0.3",
+    "resolve-alpn": "^1.2.1",
+    "sift": "^13.5.2",
+    "sliced": "^1.0.1",
+    "responselike": "^2.0.0",
+    "safer-buffer": "^2.1.2",
+    "saxes": "^5.0.1",
+    "sparse-bitfield": "^3.0.3",
+    "supports-color": "^7.2.0",
+    "sourcebin": "^4.2.5",
+    "source-map": "^0.6.1",
+    "tr46": "^3.0.0",
+    "ts-mixer": "^6.0.0",
+    "tslib": "^2.3.1",
+    "systeminformation": "^5.9.15",
+    "symbol-tree": "^3.2.4",
+    "type-check": "^0.3.2",
+    "vali-date": "^1.0.0",
+    "tough-cookie": "^4.0.0",
+    "type-fest": "^1.4.0",
+    "universalify": "^0.1.2",
+    "webidl-conversions": "^7.0.0",
+    "w3c-hr-time": "^1.0.2",
+    "w3c-xmlserializer": "^2.0.0",
+    "whatwg-url": "^11.0.0",
+    "whatwg-mimetype": "^2.3.0",
+    "ws": "^8.3.0",
+    "whatwg-encoding": "^1.0.5",
+    "word-wrap": "^1.2.3",
+    "wrappy": "^1.0.2",
+    "xml-name-validator": "^3.0.0",
+    "xmlchars": "^2.2.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
