--- a/package.json
+++ b/package.json
@@ -1,37 +1,42 @@
 {
-  "name": "djsbot_valerian",
-  "version": "0.2.3",
-  "description": "A discord.js bot made by ender!",
+  "name": "valerian",
+  "version": "1.2.0",
+  "description": "A discord.js bot made by Ender!",
   "main": "index.js",
   "engines": {
-    "node": "16.13.0",
-    "npm": "8.1.0"
+    "node": "16.16.0",
+    "npm": "8.11.0"
   },
   "dependencies": {
     "chalk": "^4.1.2",
     "delay": "^5.0.0",
     "discord-button-page": "^4.0.0",
     "discord-buttons": "^4.0.0",
-    "discord.js": "^13.3.1",
-    "discordjs-button-pagination": "^1.0.7",
+    "discord.js": "^13.6.0",
+    "discordjs-button-pagination": "^1.0.9",
     "dotenv": "^10.0.0",
     "erela.js": "^2.3.3",
     "erela.js-apple": "^1.2.5",
     "erela.js-deezer": "^1.0.7",
     "erela.js-facebook": "^1.0.4",
+    "erela.js-spotify": "^1.2.0",
+    "figlet": "^1.5.2",
     "git": "^0.1.5",
     "got": "^11.8.3",
     "lavasfy": "^2.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
+    "mongodb-reaction-role": "^1.1.0",
     "mongoose": "^6.0.12",
     "ms": "^2.1.3",
     "node-superfetch": "^0.2.3",
+    "path": "^0.12.7",
     "pretty-ms": "^7.0.1",
     "reconlx": "^2.5.1",
     "reddit-fetch": "^1.5.1",
-    "systeminformation": "^5.9.13"
+    "systeminformation": "^5.9.13",
+    "undici": "^5.6.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
