--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "valerian",
-  "version": "1.2.0",
-  "description": "A discord.js bot made by Ender!",
+  "version": "1.3.0-v14_fork",
+  "description": "A discord.js bot made by StarDev based on LavaMusic.",
   "main": "index.js",
   "engines": {
-    "node": "16.16.0",
-    "npm": "8.11.0"
+    "node": "16.17.0",
+    "npm": "8.15.0"
   },
   "dependencies": {
     "chalk": "^4.1.2",
     "delay": "^5.0.0",
     "discord-button-page": "^4.0.0",
     "discord-buttons": "^4.0.0",
-    "discord.js": "^13.6.0",
+    "discord.js": "^14.5.0",
     "discordjs-button-pagination": "^1.0.9",
     "dotenv": "^10.0.0",
-    "erela.js": "^2.3.3",
-    "erela.js-apple": "^1.2.5",
+    "erela.js": "^2.4.0",
+    "erela.js-apple": "^1.2.6",
     "erela.js-deezer": "^1.0.7",
     "erela.js-facebook": "^1.0.4",
     "erela.js-spotify": "^1.2.0",
@@ -32,11 +32,13 @@
     "ms": "^2.1.3",
     "node-superfetch": "^0.2.3",
     "path": "^0.12.7",
+    "petitio": "^1.4.0",
     "pretty-ms": "^7.0.1",
     "reconlx": "^2.5.1",
     "reddit-fetch": "^1.5.1",
     "systeminformation": "^5.9.13",
-    "undici": "^5.6.1"
+    "undici": "^5.6.1",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
